# libmpi

./: COPYRIGHT.txt  Cargo.toml
mpich/: Cargo.toml  build.rs  lib.rs
openmpi/: Cargo.toml  lib.rs
src/: lib.rs
