[package]
name = "mpi"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
#build = "build.rs"

#[features]
#mpich = ["mpich"]
#openmpi = ["openmpi"]

[lib]
name = "mpi"
path = "src/lib.rs"

[dependencies]
mpich = { path = "mpich", optional = true }
openmpi = { path = "openmpi", optional = true }
lazy_static = "*"
libc = "*"
